--- a/Spotify_clone/album.html
+++ b/Spotify_clone/album.html
@@ -253,9 +253,9 @@
             <!-- comemtneonteonaodsjdiaospjdasidjasijdasiodhasldhfudsfghaiuefghauidgfiyawsdgfhyasdgfhyasdgfhasdgfhjasdgfkhasdf -->
             <div class="d-flex flex-row bd-highlight mb-3">
               <div class="p-2 bd-highlight">
-                <a href="#"><img
-                    src="https://lovepngs.com/images/all_img/copy/1672490351SPOTIFY-PLAY-BUTTO%202%20(1).png"
-                    alt="play-icon" id="playIcon" /></a>
+                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="green" class="bi bi-play-circle-fill mt-2" viewBox="0 0 16 16">
+                  <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814z" id="play-icon"/>
+                </svg></a>
               </div>
               <div class="p-2 bd-highlight">
                 <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="grey"
